--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
       type="text/javascript"
       src="http://cdn.webix.com/edge/webix.js"
     ></script>
-    <script
-      type="text/javascript"
-      src="./testdata.js"
-    ></script>
+    <script type="text/javascript" src="./testdata.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
